# qq-tool

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.rocm  PRD_ADDENDUM.md  README.md  deploy.sh  docker-compose.rocm.yml  docker-compose.yml  migration.md  prd.md  pyproject.toml  qq_snapshot.db  sample.md
docker-typesense/: docker-compose.yaml
docker-typesense/ts-data/db/: IDENTITY  LOG
docker-typesense/ts-data/meta/: IDENTITY  LOG
docker-typesense/ts-data/state/log/: log_inprogress_00000000000000000001
qdrant-docker/: docker-compose.yaml
qdrant-docker/qdrant_storage/: raft_state.json
qdrant-docker/qdrant_storage/collections/qq_data/0/: replica_state.json
qdrant-docker/qdrant_storage/collections/qq_data/0/segments/36bd59d1-82a0-438b-991c-dd314717e340/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant-docker/qdrant_storage/collections/qq_data/0/segments/3837aa07-cc7e-4c17-b476-e16aa38cbeef/payload_index/: IDENTITY  LOG  MANIFEST-000005
scripts/: bench_local.py
scripts/systemd/: qq.service
src/qq/: __init__.py  answer_contract.py  api.py  audit.py  chunking.py  cli.py  compression.py  config.py  embeddings.py  entry.py  errors.py  hashing.py  hybrid.py  orchestrator.py  policy.py  qq_api.py  qq_cli.py  qq_embeddings.py  qq_engine.py  rerank.py  sessions.py  simhash.py  store_sqlite.py  store_typesense.py  todos.py  tokens.py  usage.py  util.py
src/qq/models/: gemini_client.py  openai_client.py
src/qq/tools/: crud.py
src/qq/vector_store/: __init__.py
(+12 files in other folders)
