[project]
name = "qq"
version = "0.0.31"
description = "qq – local context server + CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "core tools"}]
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "rich>=13.7",
  "numpy>=1.26",
  "tqdm>=4.66",
  "orjson>=3.10.0",
  "onnxruntime>=1.17",
  "transformers>=4.42",
  "optimum[onnxruntime]>=1.19",
  "tokenizers>=0.15",
  "sqlite-vec>=0.1.6",
]

[project.scripts]
qq = "qq.entry:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qq"]
